image name changed

--- a/vaccinedrive-master/src/main/resources/employee-record-deployment.yaml
+++ b/vaccinedrive-master/src/main/resources/employee-record-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         io.kompose.service: employee-record
     spec:
       containers:
-      - image: employee-record:1.0
+      - image: rishaabh/employee-record:1.0
         imagePullPolicy: ""
         name: employee-record
         ports:
