deployment and service file created

--- a/vaccinedrive-master/src/main/resources/vaccination-record-deployment.yaml
+++ b/vaccinedrive-master/src/main/resources/vaccination-record-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
-    io.kompose.service: employee-record
-  name: employee-record
+    io.kompose.service: vaccination-record
+  name: vaccination-record
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: employee-record
+      io.kompose.service: vaccination-record
   strategy: {}
   template:
     metadata:
@@ -21,14 +21,14 @@ spec:
         kompose.version: 1.21.0 (992df58d8)
       creationTimestamp: null
       labels:
-        io.kompose.service: employee-record
+        io.kompose.service: vaccination-record
     spec:
       containers:
-      - image: rishaabh/employee-record:1.1
+      - image: rishaabh/vaccination-record:1.1
         imagePullPolicy: ""
-        name: employee-record
+        name: vaccination-record
         ports:
-        - containerPort: 8091
+        - containerPort: 8092
         resources: {}
       restartPolicy: Always
       serviceAccountName: ""
