--- a/vaccinedrive-master/src/main/resources/application.properties
+++ b/vaccinedrive-master/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8091
 spring.data.mongodb.database=Employee
 spring.data.mongodb.host=mymongodb
+#spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
