--- a/vaccinedrive-master/src/main/resources/docker-compose.yml
+++ b/vaccinedrive-master/src/main/resources/docker-compose.yml
@@ -5,10 +5,18 @@ services:
     container_name: "mymongodb"
     ports:
       - 27017:27017
-  employee-record:
-    image: employee-record:1.0
-    container_name: employee-record
+  vaccination-record:
+    image: vaccination-record:1.1
+    container_name: vaccination-record
     ports:
-      - 9090:8091
+      - 8092:8092
     links:
       - mymongodb
+  employee-record:
+    image: employee-record:1.1
+    container_name: employee-record
+    ports:
+      - 8091:8091
+    links:
+      - mymongodb
+      - vaccination-record
