--- a/vaccinedrive-master/src/main/resources/mymongodb-service.yaml
+++ b/vaccinedrive-master/src/main/resources/mymongodb-service.yaml
@@ -9,6 +9,7 @@ metadata:
     io.kompose.service: mymongodb
   name: mymongodb
 spec:
+  type: LoadBalancer
   ports:
   - name: "27017"
     port: 27017
